[package]
name = "solana"
version = "0.1.0"
edition = "2024"

[dependencies]
mutrade-config = {path = "../../mutrade-config"}
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true, features = ["full"] }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-signer = { workspace = true }
solana-keypair = { workspace = true, features = ["seed-derivable"] }
bincode = { workspace = true }
base64 = { workspace = true }
tiny-bip39 = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
futures = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
solana-pubkey = { workspace = true }
solana-cpi = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
solana-program-error = { workspace = true }
bs58 = { workspace = true }
sologger_log_context = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
db = {path = "../../db"}
crossbeam-queue = { workspace = true }
serde_with = { workspace = true }
jito-sdk-rust = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
